@@ -17,7 +17,7 @@ export(Hershey, adjustcolor, as.graphicsAnnot, as.raster, blues9,
        boxplot.stats, check.options, chull, CIDFont, col2rgb, colors,
        colours, cm, colorRamp, colorRampPalette, contourLines,
        convertColor, colorConverter, colorspaces, cm.colors, densCols,
-       devAskNewPage, dev.capabilities, dev.control, dev.copy,
+       devAskNewPage, dev.capabilities, dev.capture, dev.control, dev.copy,
        dev.copy2eps, dev.copy2pdf, dev.cur, dev.hold, dev.flush,
        dev.interactive, dev.list, dev.new, dev.next, dev.off,
        dev.prev, dev.print, dev.set, dev.size, dev2bitmap,
